src/solution-workbooks/resources/tkgm-to-tkgs-stateful-app-migration/guestbook-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
